fixed styling issue with footer not sticking and stopped y axis overflow on about page

--- a/public/Assets/style.css
+++ b/public/Assets/style.css
@@ -1,7 +1,5 @@
 html,
 body {
-  width: 100%;
-  height: 100%;
   margin: 0px;
   padding: 0px;
 }
@@ -82,7 +80,7 @@ main {
 /* set blending mode for my picture and max width/height */
 #landing .col-lg-6 img {
   mix-blend-mode: screen;
-  max-width: 100%;
+  max-width: 85%;
   display: flex;
   flex-wrap: wrap-reverse;
 }
@@ -117,6 +115,16 @@ main {
 #mostRecent {
   max-height: 30rem;
   margin-top: 0%;
+}
+
+.footer{
+  margin-top: 1rem;
+  padding: 1rem;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  color: white;
 }
 
 /* set background and landing area to resize for better mobile experience */
